--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             <li><a href="https://covid19api.com/" target="_blank">API</a></li>
         </ul>
     </section>
-    <section class="hero">
+    <section class="hero">        
         <button class="hamburger">
             <span id="top"> </span>
             <span id="middle"> </span>
             <span id="bottom"> </span>
         </button>
         <div class="pannel">
-            <input type="text" class="country-input" placeholder="Enter a country">
+            <input type="text" class="country-input" placeholder="Find a country">
             <ul class="countries">
     
             </ul>
